fixing div breaking out of container. fixing bug where points left wasn't calculating correctly

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,7 +17,7 @@
 .stories_container_current_sprint {
     background-color:#ffffff;
     width:880px;
-		height:600px;
+		height:100%;
     float:left;
     color:#282828;
     padding:2px;
